# bettensor

./: .gitignore  README.md  games_data.json  last_update.json  min_compute.yml  miner.db  miner.sh  noxfile.py  predictions.db  requirements.txt  setup.cfg  setup.py  test_db.db  validator.sh
api_scripts/: baseball_odds.py  games_data.json  get_games.py  sample_data.json
app/components/: ScoringSystem.py
bettensor/: __init__.py  protocol.py
bettensor/api/: chain_metadata.py  dummy.py
bettensor/base/: miner.py  neuron.py  validator.py
bettensor/miner/: bettensor_miner.py  cli.py  menu.py  model_params_tui.py  server_interaction.py
bettensor/utils/: api_client.py  bettensor_api.py  calculate_score.py  database_manager.py  games.db  get_baseball_games.py  get_games.py  get_soccer_games.py  miner_interface_server.py  miner_stats.py  print_db.py  score_inputs.py  sign_and_validate.py  sports_data.py  test_weights.py  update_games.py  watchdog.py  website_handler.py  weights_functions.py
bettensor/validator/: forward.py  (+1 more)
data/: miner_env.txt
docs/: mining.md  validating.md
neurons/: cli.py  miner.py  validator.py
scripts/: auto_update.sh  backup_and_migrate.sh  download_db.py  fix_miner_stats.py  migrate.sh  repair_db.py  restart_pm2_processes.sh  run.sh  setup.sh  start_neuron.sh  startup.sh
template-scripts/: miner.sh.template  validator.sh.template
tests/: conftest.py  test_interface_server.py  test_miner.py  test_model_load.ipynb  test_nfl_model.py  test_process_model_predictions.py  test_protocol.py  test_template_validator.py  test_validator.py
(+57 files in other folders)
