[metadata]
name = bettensor
version = 2.0.4
database_version = 1.0.0
reset_validator_scores = True
author = geardici, oneandahalfcats, qucat
organization = Nickel5
author_email = test@email.com
description = This project implements the Bettensor subnet for Bittensor
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.10
install_requires = 
	bittensor == 6.9.4
	torch
	gitpython
	python-dotenv

[options.extras_require]
miner = 
	datetime
	sqlite3
	json
	time
	typing
	uuid
validator = 
	datetime
	sqlite3
	json
	time
	typing
	uuid

